Basic layout for home screen

--- a/ldapadmin/src/main/webapp/console/app/components/home/home.tpl.html
+++ b/ldapadmin/src/main/webapp/console/app/components/home/home.tpl.html
@@ -1,3 +1,112 @@
-<section>
-  <h2>{{home.heading}}</h2>
+<section class="home row">
+
+  <div class="col-md-4">
+    <div class="alerts">
+      <div class="alert alert-info">
+        <i class="glyphicon glyphicon-user pull-right"></i>
+        <i class="glyphicon glyphicon-user pull-right"></i>
+        <a href="" translate>home.users</a>
+      </div>
+      <div class="alert alert-danger">
+        <a href="">3 <span translate>home.waiting_users</span></a>
+      </div>
+      <div class="alert alert-warning">
+        <a href="">4 <span translate>home.expired_users</span></a>
+      </div>
+    </div>
+    <div class="jumbotron">
+      <h1>43</h1>
+      <p translate>home.connected</p>
+    <table class="table table-condensed">
+      <thead>
+        <tr>
+          <th translate>logs.date</th>
+          <th translate>logs.sender</th>
+          <th translate>logs.type</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>2 days ago</td>
+          <td>admin</td>
+          <td>send mail</td>
+        </tr>
+        <tr>
+          <td>2 days ago</td>
+          <td>admin</td>
+          <td>send mail</td>
+        </tr>
+        <tr>
+          <td>2 days ago</td>
+          <td>admin</td>
+          <td>send mail</td>
+        </tr>
+        <tr>
+          <td>2 days ago</td>
+          <td>admin</td>
+          <td>send mail</td>
+        </tr>
+        <tr>
+          <td>2 days ago</td>
+          <td>admin</td>
+          <td>send mail</td>
+        </tr>
+        <tr>
+          <td>2 days ago</td>
+          <td>admin</td>
+          <td>send mail</td>
+        </tr>
+      </tbody>
+    </table>
+    </div>
+  </div>
+
+  <div class="col-md-8">
+
+    <stats data="home.data.requests" type="'line'" config="home.config.requests" title="'analytics.requests'"></stats>
+
+    <table class="table table-condensed">
+      <thead>
+        <tr>
+          <th translate>logs.date</th>
+          <th translate>logs.sender</th>
+          <th translate>logs.type</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>2 days ago</td>
+          <td>admin</td>
+          <td>send mail</td>
+        </tr>
+        <tr>
+          <td>2 days ago</td>
+          <td>admin</td>
+          <td>send mail</td>
+        </tr>
+        <tr>
+          <td>2 days ago</td>
+          <td>admin</td>
+          <td>send mail</td>
+        </tr>
+        <tr>
+          <td>2 days ago</td>
+          <td>admin</td>
+          <td>send mail</td>
+        </tr>
+        <tr>
+          <td>2 days ago</td>
+          <td>admin</td>
+          <td>send mail</td>
+        </tr>
+        <tr>
+          <td>2 days ago</td>
+          <td>admin</td>
+          <td>send mail</td>
+        </tr>
+      </tbody>
+    </table>
+
+  </div>
+
 </section>
