--- a/ldapadmin/src/main/webapp/console/app/components/user/user.tpl.html
+++ b/ldapadmin/src/main/webapp/console/app/components/user/user.tpl.html
@@ -153,8 +153,8 @@
       <div class="panel-body" ng-if="user.tab=='analytics'">
         <h4 translate>analytics.title</h4>
         <div class="row">
-          <stats data="user.data.requests.results" type="'line'" config="user.config.requests" title="'analytics.requests'" class="col-md-6"></stats>
-          <stats data="user.data.layers.results" type="'bar'" config="user.config.layers" title="'analytics.layers'" class="col-md-6"></stats>
+          <stats data="user.data.requests" type="'line'" config="user.config.requests" title="'analytics.requests'" class="col-md-6"></stats>
+          <stats data="user.data.layers" type="'bar'" config="user.config.layers" title="'analytics.layers'" class="col-md-6"></stats>
         </div>
       </div>
 
