Plug some home service & swich controller to es6 classes :sunglasses:

--- a/ldapadmin/src/main/webapp/console/app/components/users/users.tpl.html
+++ b/ldapadmin/src/main/webapp/console/app/components/users/users.tpl.html
@@ -1,6 +1,6 @@
 <section>
 
-  <groups class="col-md-4" groups="users.groups" active-group="users.activeGroup"></groups>
+  <groups class="col-md-4 groups" groups="users.groups" active-group="users.activeGroup"></groups>
 
   <div class="col-md-8">
     <table class="table table-striped table-condensed">
