--- a/ldapadmin/src/main/webapp/console/app/components/home/home.tpl.html
+++ b/ldapadmin/src/main/webapp/console/app/components/home/home.tpl.html
@@ -5,56 +5,37 @@
       <div class="alert alert-info">
         <i class="glyphicon glyphicon-user pull-right"></i>
         <i class="glyphicon glyphicon-user pull-right"></i>
-        <a href="" translate>home.users</a>
+        <a ng-link="users({id: 'all'})" translate>home.users</a>
       </div>
       <div class="alert alert-danger">
-        <a href="">3 <span translate>home.waiting_users</span></a>
+        <a ng-link="users({id: 'PENDING'})">
+          3 <span translate>home.waiting_users</span><br>
+          <span class="manage" translate>home.view_manage</span>
+        </a>
       </div>
       <div class="alert alert-warning">
-        <a href="">4 <span translate>home.expired_users</span></a>
+        <a ng-link="users({id: 'all'})">
+          4 <span translate>home.expired_users</span><br>
+          <span class="manage" translate>home.view_manage</span>
+        </a>
       </div>
     </div>
     <div class="jumbotron">
-      <h1>43</h1>
+      <h1>{{::home.connected.results.length}}</h1>
       <p translate>home.connected</p>
     <table class="table table-condensed">
       <thead>
         <tr>
-          <th translate>logs.date</th>
-          <th translate>logs.sender</th>
-          <th translate>logs.type</th>
+          <th translate>home.nb_requests</th>
+          <th translate>home.user</th>
+          <th translate>home.org</th>
         </tr>
       </thead>
       <tbody>
-        <tr>
-          <td>2 days ago</td>
-          <td>admin</td>
-          <td>send mail</td>
-        </tr>
-        <tr>
-          <td>2 days ago</td>
-          <td>admin</td>
-          <td>send mail</td>
-        </tr>
-        <tr>
-          <td>2 days ago</td>
-          <td>admin</td>
-          <td>send mail</td>
-        </tr>
-        <tr>
-          <td>2 days ago</td>
-          <td>admin</td>
-          <td>send mail</td>
-        </tr>
-        <tr>
-          <td>2 days ago</td>
-          <td>admin</td>
-          <td>send mail</td>
-        </tr>
-        <tr>
-          <td>2 days ago</td>
-          <td>admin</td>
-          <td>send mail</td>
+        <tr ng-repeat="user in home.connected.results">
+          <td>{{::user.nb_requests}}</td>
+          <td>{{::user.user}}</td>
+          <td>{{::user.organization}}</td>
         </tr>
       </tbody>
     </table>
@@ -74,35 +55,10 @@
         </tr>
       </thead>
       <tbody>
-        <tr>
-          <td>2 days ago</td>
-          <td>admin</td>
-          <td>send mail</td>
-        </tr>
-        <tr>
-          <td>2 days ago</td>
-          <td>admin</td>
-          <td>send mail</td>
-        </tr>
-        <tr>
-          <td>2 days ago</td>
-          <td>admin</td>
-          <td>send mail</td>
-        </tr>
-        <tr>
-          <td>2 days ago</td>
-          <td>admin</td>
-          <td>send mail</td>
-        </tr>
-        <tr>
-          <td>2 days ago</td>
-          <td>admin</td>
-          <td>send mail</td>
-        </tr>
-        <tr>
-          <td>2 days ago</td>
-          <td>admin</td>
-          <td>send mail</td>
+        <tr ng-repeat="log in home.logs.logs">
+          <td>{{::log.date | date: 'mediumDate'}}</td>
+          <td>{{::log.admin}}</td>
+          <td>{{::log.type}}</td>
         </tr>
       </tbody>
     </table>
