Fix analytics on dashboard

--- a/ldapadmin/src/main/webapp/console/app/components/home/home.tpl.html
+++ b/ldapadmin/src/main/webapp/console/app/components/home/home.tpl.html
@@ -44,7 +44,7 @@
 
   <div class="col-md-8">
 
-    <stats data="home.data.requests" type="'line'" config="home.config.requests" title="'analytics.requests'"></stats>
+    <stats data="home.requests" type="'line'" config="home.requests_conf" title="'analytics.requests'"></stats>
 
     <table class="table table-condensed">
       <thead>
