--- a/ldapadmin/src/main/webapp/console/app/styles/app.scss
+++ b/ldapadmin/src/main/webapp/console/app/styles/app.scss
@@ -87,10 +87,12 @@ groups input {
       border-color     : #F29200;
     }
     &:first-child {
-      border-radius: 4px 4px 0 0;
+      border-top-left-radius: 4px;
+      border-top-right-radius: 4px;
     }
     &:last-child {
-      border-radius: 0 0 4px 4px;
+      border-bottom-left-radius: 4px;
+      border-bottom-right-radius: 4px;
     }
   }
   .jumbotron {
