--- a/ldapadmin/src/main/webapp/console/app/styles/app.scss
+++ b/ldapadmin/src/main/webapp/console/app/styles/app.scss
@@ -109,7 +109,16 @@ groups input {
 
 // GROUPS
 .groups {
-  border-right: 2px solid #009FE3;
+  @media (min-width: 992px) {
+    border-right: 2px solid #009FE3;
+  }
+  .alert-info {
+    background-color : #009FE3;
+    border-color     : #009FE3;
+    a:not(.btn) {
+      color            : white;
+    }
+  }
 }
 
 // CHARTS
