Add interval chooser on user analytics

--- a/ldapadmin/src/main/webapp/console/app/styles/app.scss
+++ b/ldapadmin/src/main/webapp/console/app/styles/app.scss
@@ -121,6 +121,14 @@ groups input {
   }
 }
 
+// STATS
+@media (min-width: 992px) {
+  .user-analytics select {
+    width: 25%;
+  }
+}
+
+
 // CHARTS
 .chartist {
   height: 25em;
