--- a/ldapadmin/src/main/webapp/console/app/components/user/user.tpl.html
+++ b/ldapadmin/src/main/webapp/console/app/components/user/user.tpl.html
@@ -150,8 +150,12 @@
         </div>
       </div>
 
-      <div class="panel-body" ng-if="user.tab=='analytics'">
+      <div class="panel-body user-analytics" ng-if="user.tab=='analytics'">
+        <select class="form-control pull-right" ng-model="user.interval" ng-change="user.setInterval()"
+          ng-options="interval as interval.label | translate for interval in user.intervals track by interval.value">
+        </select>
         <h4 translate>analytics.title</h4>
+        <hr>
         <div class="row">
           <stats data="user.data.requests" type="'line'" config="user.config.requests" title="'analytics.requests'" class="col-md-6"></stats>
           <stats data="user.data.layers" type="'bar'" config="user.config.layers" title="'analytics.layers'" class="col-md-6"></stats>
