Refactor interval chooser for use outside user controller

--- a/ldapadmin/src/main/webapp/console/app/styles/app.scss
+++ b/ldapadmin/src/main/webapp/console/app/styles/app.scss
@@ -116,7 +116,7 @@ groups input {
     background-color : #009FE3;
     border-color     : #009FE3;
     a:not(.btn) {
-      color            : white;
+      color          : white;
     }
   }
 }
@@ -149,7 +149,7 @@ groups input {
 .ct-series-a
 .ct-slice-donut
 {
-  stroke: #337ab7;
+  stroke: #009FE3;
 }
 
 // CHOSEN
