--- a/ldapadmin/src/main/webapp/console/app/styles/app.scss
+++ b/ldapadmin/src/main/webapp/console/app/styles/app.scss
@@ -10,8 +10,17 @@ a {
   color : #009FE3;
 }
 
-groups input {
-  margin-bottom: 1em;
+groups {
+  input {
+    margin-bottom: 1em;
+  }
+  .create-btn {
+    display: flex;
+    .btn {
+      flex-grow : 1;
+      margin    : 0 .5em;
+    }
+  }
 }
 
 .container > .nav {
