Add filtering & pagination to user list

--- a/ldapadmin/src/main/webapp/console/app/components/home/home.tpl.html
+++ b/ldapadmin/src/main/webapp/console/app/components/home/home.tpl.html
@@ -46,6 +46,8 @@
 
     <stats data="home.requests" type="'line'" config="home.requests_conf" title="'analytics.requests'"></stats>
 
+    <h3 translate>home.logs</h3>
+
     <table class="table table-condensed">
       <thead>
         <tr>
