--- a/ldapadmin/src/main/webapp/console/app/components/users/users.tpl.html
+++ b/ldapadmin/src/main/webapp/console/app/components/users/users.tpl.html
@@ -1,9 +1,17 @@
-<section>
+<section class="users">
 
   <groups class="col-md-4 groups" groups="users.groups" active-group="users.activeGroup"></groups>
 
   <div class="col-md-8">
+
+    <input type="text" class="filter-users form-control pull-right" ng-model="users.q" placeholder="{{'group.filter_users' | translate}}"></input>
+    <i class="glyphicon glyphicon-remove-sign" ng-show="users.q != ''" ng-click="users.q = ''"></i>
+    <h3 ng-if="!users.activeGroup">{{users.users.length}} <span translate>group.users</span></h3>
+    <h3 ng-if="users.activeGroup">{{users.activeGroup.cn}}</h3>
+    <p ng-if="users.activeGroup"><em>{{users.activeGroup.description}}</em></p>
+
     <table class="table table-striped table-condensed">
+
       <thead>
         <tr>
           <th>User</th>
@@ -11,8 +19,9 @@
           <th>Organisation</th>
         </tr>
       </thead>
+
       <tbody>
-        <tr ng-repeat="user in users.users">
+        <tr dir-paginate="user in users.users | filter:users.q | itemsPerPage: 2">
           <td>
             <a ng-link="user({id: user.uid, tab: 'infos'})">{{::user.sn}} {{::user.givenName}}</a>
           </td>
@@ -20,7 +29,11 @@
           <td>{{::user.o}}</td>
         </tr>
       </tbody>
+
     </table>
+
+    <dir-pagination-controls></dir-pagination-controls>
+
   </div>
 
 </section>
