--- a/ldapadmin/src/main/webapp/console/app/styles/app.scss
+++ b/ldapadmin/src/main/webapp/console/app/styles/app.scss
@@ -27,14 +27,21 @@ groups {
   margin-bottom: 2em;
 }
 
-section .nav {
-  width         : 130%;
-  border        : 1px solid rgb(221, 221, 221);
-  border-radius : 5px;
-  margin-top    : 2.75em;
-  padding       : 1em 0;
-  li a {
-    border-radius : 0;
+section {
+  .nav {
+    width         : 130%;
+    border        : 1px solid rgb(221, 221, 221);
+    border-radius : 5px;
+    margin-top    : 2.75em;
+    padding       : 1em 0;
+    li a {
+      border-radius : 0;
+    }
+  }
+  h3:first-of-type {
+    margin-top    : 0;
+    padding-top   : .1em;
+    margin-bottom : 1em;
   }
 }
 
@@ -126,6 +133,25 @@ section .nav {
     border-color     : #009FE3;
     a:not(.btn) {
       color          : white;
+    }
+  }
+}
+.users {
+  @media (min-width: 992px) {
+    margin: 0 -15px;
+  }
+  em {
+    color: #888;
+  }
+  .filter-users {
+    width: 25%;
+  }
+  .glyphicon-remove-sign {
+    position : absolute;
+    right    : 1.5em;
+    top      : 0.7em;
+    &:hover {
+      cursor: pointer;
     }
   }
 }
