Fixes for analytics, remove fake responses.

--- a/ldapadmin/src/main/webapp/console/app/components/analytics/analytics.tpl.html
+++ b/ldapadmin/src/main/webapp/console/app/components/analytics/analytics.tpl.html
@@ -19,8 +19,8 @@
   <hr>
 
   <div class="row">
-    <stats data="analytics.data.requests" type="'line'" config="analytics.config.requests" title="'analytics.requests'" class="col-md-6"></stats>
-    <stats data="analytics.data.layers" type="'bar'" config="analytics.config.layers" title="'analytics.layers'" class="col-md-6"></stats>
+    <stats data="analytics.requests" type="'line'" config="analytics.config.requests" title="'analytics.requests'" class="col-md-6"></stats>
+    <stats data="analytics.layers" type="'bar'" config="analytics.config.layers" title="'analytics.layers'" class="col-md-6"></stats>
   </div>
 
 </section>
