--- a/ldapadmin/src/main/webapp/console/app/styles/app.scss
+++ b/ldapadmin/src/main/webapp/console/app/styles/app.scss
@@ -40,7 +40,7 @@ section {
       border-radius : 0;
     }
   }
-  h3:first-of-type {
+  .groups-title {
     margin-top    : 0;
     padding-top   : .1em;
     margin-bottom : 1em;
