--- a/ldapadmin/src/main/webapp/console/app/styles/app.scss
+++ b/ldapadmin/src/main/webapp/console/app/styles/app.scss
@@ -115,12 +115,12 @@ section {
       border-color     : #F29200;
     }
     &:first-child {
-      border-top-left-radius: 4px;
-      border-top-right-radius: 4px;
+      border-top-left-radius  : 4px;
+      border-top-right-radius : 4px;
     }
     &:last-child {
-      border-bottom-left-radius: 4px;
-      border-bottom-right-radius: 4px;
+      border-bottom-left-radius  : 4px;
+      border-bottom-right-radius : 4px;
     }
   }
   .jumbotron {
@@ -131,6 +131,22 @@ section {
     }
     h1, p {
       text-align : center;
+    }
+    dir-pagination-controls {
+      display    : block;
+      text-align : center;
+    }
+    table {
+      table-layout : fixed;
+      th, td {
+        width         : 40%;
+        overflow      : hidden;
+        text-overflow : ellipsis;
+        white-space   : nowrap;
+        &:first-of-type {
+          width    : 20%;
+        }
+      }
     }
   }
 }
