--- a/ldapadmin/src/main/webapp/console/app/components/analytics/analytics.tpl.html
+++ b/ldapadmin/src/main/webapp/console/app/components/analytics/analytics.tpl.html
@@ -4,7 +4,7 @@
     ng-options="interval as interval.label | translate for interval in analytics.intervals track by interval.value">
   </select>
   <select class="form-control stats-conf" ng-model="analytics.group" ng-change="analytics.setGroup()">
-    <option value="all">Tous les groupes</option>
+    <option value="all" translate>analytics.everyone</option>
     <option value="{{group.cn}}" ng-repeat="group in analytics.groups">{{group.cn}}</option>
   </select>
 
