Refactor date picker as a component, then fixes graphs

--- a/ldapadmin/src/main/webapp/console/app/components/analytics/analytics.tpl.html
+++ b/ldapadmin/src/main/webapp/console/app/components/analytics/analytics.tpl.html
@@ -1,8 +1,7 @@
 <section class="analytics">
 
-  <select class="form-control stats-conf" ng-model="analytics.interval" ng-change="analytics.setInterval()"
-    ng-options="interval as interval.label | translate for interval in analytics.intervals track by interval.value">
-  </select>
+  <date class="stats-conf" model="analytics.date" callback="analytics.load(analytics.group)"></date>
+
   <select class="form-control stats-conf" ng-model="analytics.group" ng-change="analytics.setGroup()">
     <option value="all" translate>analytics.everyone</option>
     <option value="{{group.cn}}" ng-repeat="group in analytics.groups">{{group.cn}}</option>
