Fixes for analytics change

--- a/ldapadmin/src/main/webapp/console/app/styles/app.scss
+++ b/ldapadmin/src/main/webapp/console/app/styles/app.scss
@@ -211,6 +211,9 @@ section {
     border-radius    : 4px;
     background-color : $lightblue;
   }
+  .alert {
+    margin-top : 2em;
+  }
 }
 
 // LOGS
