--- a/ldapadmin/src/main/webapp/console/app/components/stats/stats.tpl.html
+++ b/ldapadmin/src/main/webapp/console/app/components/stats/stats.tpl.html
@@ -11,14 +11,17 @@
 
   <h5>{{stats.title | translate}}</h5>
 
-  <div ng-show="stats.nodata">NO DATA</div>
+  <div ng-show="stats.nodata && stats.data.$resolved" class="alert alert-warning">
+    <i class="glyphicon glyphicon-alert"></i>&nbsp;
+    <span translate>analytics.nodata</span>
+  </div>
 
   <div ng-show="!stats.data.$resolved" class="progress">
     <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
     </div>
   </div>
 
-  <div class="chartist" ng-show="stats.view=='graph' && stats.data.$resolved"></div>
+  <div class="chartist" ng-show="stats.view=='graph' && stats.data.$resolved && !stats.nodata"></div>
 
   <table class="table table-bordered table-striped" ng-show="stats.view=='table'">
     <tr ng-repeat="value in stats.parsed.series[0] track by $index">
