Filtering logs by date + ordering

--- a/ldapadmin/src/main/webapp/console/app/styles/app.scss
+++ b/ldapadmin/src/main/webapp/console/app/styles/app.scss
@@ -231,6 +231,17 @@ section {
     select {
       width : auto;
     }
+    date {
+      select {
+        max-width: none;
+        height: 30px;
+        line-height: 30px;
+        padding: 5px 10px;
+        font-size: 12px;
+        line-height: 1.5;
+        border-radius: 3px;
+      }
+    }
   }
   .header-filter span {
     display     : inline-block;
