--- a/ldapadmin/src/main/webapp/console/app/styles/app.scss
+++ b/ldapadmin/src/main/webapp/console/app/styles/app.scss
@@ -90,47 +90,49 @@ section {
 
 // HOME
 .home {
-  .alert {
-    margin-bottom : 0;
-    border-radius : 0;
-    .glyphicon,
-    a {
-      color: white;
-    }
-    .manage {
-      font-weight : bold;
-    }
-    .glyphicon {
-      font-size : 2.7em;
-      &:first-of-type {
-        font-size   : 2.3em;
-        margin-left : -.5em;
-      }
-    }
-    &.alert-info {
-      background-color : $lightblue;
-      border-color     : $lightblue;
-      padding          : 30px 15px;
-      font-weight      : bold;
+  .alerts {
+    .alert {
+      margin-bottom : 0;
+      border-radius : 0;
+      .glyphicon,
       a {
-        font-size: 1.2em;
+        color: white;
       }
-    }
-    &.alert-danger {
-      background-color : #E40615;
-      border-color     : #E40615;
-    }
-    &.alert-warning {
-      background-color : #F29200;
-      border-color     : #F29200;
-    }
-    &:first-child {
-      border-top-left-radius  : 4px;
-      border-top-right-radius : 4px;
-    }
-    &:last-child {
-      border-bottom-left-radius  : 4px;
-      border-bottom-right-radius : 4px;
+      .manage {
+        font-weight : bold;
+      }
+      .glyphicon {
+        font-size : 2.7em;
+        &:first-of-type {
+          font-size   : 2.3em;
+          margin-left : -.5em;
+        }
+      }
+      &.alert-info {
+        background-color : $lightblue;
+        border-color     : $lightblue;
+        padding          : 30px 15px;
+        font-weight      : bold;
+        a {
+          font-size: 1.2em;
+        }
+      }
+      &.alert-danger {
+        background-color : #E40615;
+        border-color     : #E40615;
+      }
+      &.alert-warning {
+        background-color : #F29200;
+        border-color     : #F29200;
+      }
+      &:first-child {
+        border-top-left-radius  : 4px;
+        border-top-right-radius : 4px;
+      }
+      &:last-child {
+        border-bottom-left-radius  : 4px;
+        border-bottom-right-radius : 4px;
+      }
     }
   }
   .jumbotron {
