Upgrade chosen, use it to filter groups in analytics

--- a/ldapadmin/src/main/webapp/console/app/components/analytics/analytics.tpl.html
+++ b/ldapadmin/src/main/webapp/console/app/components/analytics/analytics.tpl.html
@@ -2,7 +2,7 @@
 
   <date class="stats-conf" model="analytics.date" callback="analytics.load(analytics.group)"></date>
 
-  <select class="form-control stats-conf" ng-model="analytics.group" ng-change="analytics.setGroup()">
+  <select class="form-control stats-conf" ng-model="analytics.group" ng-change="analytics.setGroup()" chosen>
     <option value="all" translate>analytics.everyone</option>
     <option value="{{group.cn}}" ng-repeat="group in analytics.groups">{{group.cn}}</option>
   </select>
