Add ng-inline directive, in use for user form

--- a/ldapadmin/src/main/webapp/console/app/components/user/user.tpl.html
+++ b/ldapadmin/src/main/webapp/console/app/components/user/user.tpl.html
@@ -22,107 +22,9 @@
     <div class="panel panel-default">
 
 
-      <div class="panel-body" ng-if="user.tab=='infos'">
-        <form class="form-horizontal">
-          <div class="row">
-            <div class="col-md-6">
+      <div class="panel-body" ng-if="user.tab=='infos'" >
+        <div ng-inline="templates/userForm.tpl.html"></div>
 
-              <div class="form-group">
-                <label class="col-sm-4" for="uid">Login</label>
-                <div class="col-sm-8">
-                  <input ng-model="user.user.uid" class="form-control" id="uid" placeholder="Login">
-                </div>
-              </div>
-
-              <div class="form-group form-group-sm">
-                <label class="col-sm-4" for="commonName">CommonName</label>
-                <div class="col-sm-8">
-                  <input ng-model="user.user.commonName" class="form-control" id="commonName" placeholder="CommonName">
-                </div>
-              </div>
-
-              <div class="form-group form-group-sm">
-                <label class="col-sm-4" for="email">Email address</label>
-                <div class="col-sm-8">
-                  <input ng-model="user.user.mail" type="email" class="form-control" id="email" placeholder="Email">
-                </div>
-              </div>
-              <div class="form-group form-group-sm">
-                <label class="col-sm-4" for="address">Address</label>
-                <div class="col-sm-8">
-                  <input ng-model="user.user.postalAddress" class="form-control" id="address" placeholder="Address">
-                </div>
-              </div>
-
-              <div class="form-group form-group-sm">
-                <label class="col-sm-4" for="organization">Organization</label>
-                <div class="col-sm-8">
-                  <input ng-model="user.user.o" class="form-control" id="organization" placeholder="Organization">
-                </div>
-              </div>
-
-              <div class="form-group form-group-sm">
-                <label class="col-sm-4" for="organization">Description</label>
-                <div class="col-sm-8">
-                  <input ng-model="user.user.description" class="form-control" id="description" placeholder="Description">
-                </div>
-              </div>
-              <div class="form-group form-group-sm">
-                <label class="col-sm-4" for="manager">Nom du Responsable</label>
-                <div class="col-sm-8">
-                  <input ng-model="user.user.manager" class="form-control" id="manager" placeholder="Manager">
-                </div>
-              </div>
-              <div class="form-group form-group-sm">
-                <label class="col-sm-4" for="shadowExpire">shadowExpire</label>
-                <div class="col-sm-8">
-                  <input ng-model="user.user.shadowExpire" class="form-control" id="shadowExpire" placeholder="shadowExpire">
-                </div>
-              </div>
-              <div class="form-group form-group-sm">
-                <label class="col-sm-4" for="preferredLanguage">Contexte</label>
-                <div class="col-sm-8">
-                  <input ng-model="user.user.preferredLanguage" class="form-control" id="preferredLanguage"
-                  placeholder="preferredLanguage">
-                </div>
-              </div>
-
-            </div>
-
-            <div class="col-md-6">
-              <div class="form-group">
-                <label class="col-sm-4" for="givenName">Password</label> <a>Re-initialiser</a>
-              </div>
-
-              <div class="form-group form-group-sm">
-                <label class="col-sm-4" for="givenName">GivenName</label>
-                <div class="col-sm-8">
-                  <input ng-model="user.user.givenName" class="form-control" id="givenName" placeholder="GivenName">
-                </div>
-              </div>
-              <div class="form-group form-group-sm">
-                <label class="col-sm-4" for="phone">Phone</label>
-                <div class="col-sm-8">
-                  <input ng-model="user.user.telephoneNumber" class="form-control" id="phone" placeholder="telephoneNumber">
-                </div>
-              </div>
-              <div class="form-group form-group-sm">
-                <label class="col-sm-4" for="fax">fax</label>
-                <div class="col-sm-8">
-                  <input ng-model="user.user.facsimile" class="form-control" id="fax" placeholder="facsimileTelephoneNumber">
-                </div>
-              </div>
-
-              <div class="form-group form-group-sm">
-                <label class="col-sm-4" for="title">Title</label>
-                <div class="col-sm-8">
-                  <input ng-model="user.user.title" class="form-control" id="title" placeholder="Title">
-                </div>
-              </div>
-
-            </form>
-          </div>
-        </div>
 
         <hr>
 
