--- a/ldapadmin/src/main/webapp/console/app/templates/userForm.tpl.html
+++ b/ldapadmin/src/main/webapp/console/app/templates/userForm.tpl.html
@@ -7,73 +7,73 @@
     <div class="col-md-6">
 
       <div class="form-group" ng-if="model.$promise">
-        <label class="col-sm-4" for="uid">Login</label>
+        <label class="col-sm-4" for="uid" translate>user.login</label>
         <div class="col-sm-8">
           <input ng-model="model.uid" class="form-control" id="uid" placeholder="Login" disabled>
         </div>
       </div>
 
       <div class="form-group form-group-sm">
-        <label class="col-sm-4" for="surName">surName</label>
+        <label class="col-sm-4" for="surName" translate>user.sn</label>
         <div class="col-sm-8">
           <input ng-model="model.sn" class="form-control" id="sn" placeholder="sn">
         </div>
       </div>
 
       <div class="form-group form-group-sm">
-        <label class="col-sm-4" for="givenName">GivenName</label>
+        <label class="col-sm-4" for="givenName" translate>user.gn</label>
         <div class="col-sm-8">
           <input ng-model="model.givenName" class="form-control" id="givenName" placeholder="GivenName">
         </div>
       </div>
 
       <div class="form-group form-group-sm">
-        <label class="col-sm-4" for="commonName">CommonName</label>
+        <label class="col-sm-4" for="commonName" translate>user.cn</label>
         <div class="col-sm-8">
           <input ng-model="model.cn" class="form-control" id="commonName" placeholder="CommonName" disabled>
         </div>
       </div>
 
       <div class="form-group form-group-sm">
-        <label class="col-sm-4" for="email">Email address</label>
+        <label class="col-sm-4" for="email" translate>user.mail</label>
         <div class="col-sm-8">
           <input ng-model="model.mail" type="email" class="form-control" id="email" placeholder="Email">
         </div>
       </div>
       <div class="form-group form-group-sm">
-        <label class="col-sm-4" for="address">Address</label>
+        <label class="col-sm-4" for="address" translate>user.address</label>
         <div class="col-sm-8">
           <input ng-model="model.postalAddress" class="form-control" id="address" placeholder="Address">
         </div>
       </div>
 
       <div class="form-group form-group-sm">
-        <label class="col-sm-4" for="organization">Organization</label>
+        <label class="col-sm-4" for="organization" translate>user.org</label>
         <div class="col-sm-8">
           <input ng-model="model.o" class="form-control" id="organization" placeholder="Organization">
         </div>
       </div>
 
       <div class="form-group form-group-sm">
-        <label class="col-sm-4" for="organization">Description</label>
+        <label class="col-sm-4" for="organization" translate>user.description</label>
         <div class="col-sm-8">
           <input ng-model="model.description" class="form-control" id="description" placeholder="Description">
         </div>
       </div>
       <div class="form-group form-group-sm">
-        <label class="col-sm-4" for="manager">Nom du Responsable</label>
+        <label class="col-sm-4" for="manager" translate>user.manager</label>
         <div class="col-sm-8">
           <input ng-model="model.manager" class="form-control" id="manager" placeholder="Manager">
         </div>
       </div>
       <div class="form-group form-group-sm">
-        <label class="col-sm-4" for="shadowExpire">shadowExpire</label>
+        <label class="col-sm-4" for="shadowExpire" translate>user.expire</label>
         <div class="col-sm-8">
           <input ng-model="model.shadowExpire" class="form-control" id="shadowExpire" placeholder="shadowExpire">
         </div>
       </div>
       <div class="form-group form-group-sm">
-        <label class="col-sm-4" for="preferredLanguage">Contexte</label>
+        <label class="col-sm-4" for="preferredLanguage" translate>user.context</label>
         <div class="col-sm-8">
           <input ng-model="model.preferredLanguage" class="form-control" id="preferredLanguage"
           placeholder="preferredLanguage">
@@ -85,23 +85,28 @@
     <div class="col-md-6">
 
       <div class="form-group" ng-if="model.$promise">
-        <label class="col-sm-4" for="givenName">Password</label> <a>Re-initialiser</a>
+        <label class="col-sm-4" for="givenName" translate>user.password</label>
+        <a href="/ldapadmin/account/passwordRecovery?email={{user.user.mail | encodeURIComponent}}"
+          target="_blank" class="col-sm-8">
+          <span translate>user.reset</span>
+          <i class="glyphicon glyphicon-new-window"></i>
+        </a>
       </div>
       <div class="form-group form-group-sm">
-        <label class="col-sm-4" for="phone">Phone</label>
+        <label class="col-sm-4" for="phone" translate>user.phone</label>
         <div class="col-sm-8">
           <input ng-model="model.telephoneNumber" class="form-control" id="phone" placeholder="telephoneNumber">
         </div>
       </div>
       <div class="form-group form-group-sm">
-        <label class="col-sm-4" for="fax">fax</label>
+        <label class="col-sm-4" for="fax" translate>user.fax</label>
         <div class="col-sm-8">
           <input ng-model="model.facsimile" class="form-control" id="fax" placeholder="facsimileTelephoneNumber">
         </div>
       </div>
 
       <div class="form-group form-group-sm">
-        <label class="col-sm-4" for="title">Title</label>
+        <label class="col-sm-4" for="title" translate>user.title</label>
         <div class="col-sm-8">
           <input ng-model="model.title" class="form-control" id="title" placeholder="Title">
         </div>
