User creation draft

--- a/ldapadmin/src/main/webapp/console/app/components/groups/groups.tpl.html
+++ b/ldapadmin/src/main/webapp/console/app/components/groups/groups.tpl.html
@@ -3,7 +3,7 @@
     <a ng-link="users({id: 'all'})" translate>group.allusers</a>
     <hr>
     <div class="create-btn">
-      <a href="" class="btn btn-default" translate>group.newuser</a>
+      <a ng-link="newUser" class="btn btn-default" translate>group.newuser</a>
       <a href="" class="btn btn-default" translate>group.newgroup</a>
     </div>
   </div>
