--- a/ldapadmin/src/main/webapp/console/app/templates/userForm.tpl.html
+++ b/ldapadmin/src/main/webapp/console/app/templates/userForm.tpl.html
@@ -1,65 +1,81 @@
 <form class="form-horizontal">
 
+  <div ng-if="!model">pas de model</div>
+
   <div class="row">
 
     <div class="col-md-6">
 
-      <div class="form-group">
+      <div class="form-group" ng-if="model.$promise">
         <label class="col-sm-4" for="uid">Login</label>
         <div class="col-sm-8">
-          <input ng-model="user.user.uid" class="form-control" id="uid" placeholder="Login">
+          <input ng-model="model.uid" class="form-control" id="uid" placeholder="Login" disabled>
+        </div>
+      </div>
+
+      <div class="form-group form-group-sm">
+        <label class="col-sm-4" for="surName">surName</label>
+        <div class="col-sm-8">
+          <input ng-model="model.sn" class="form-control" id="sn" placeholder="sn">
+        </div>
+      </div>
+
+      <div class="form-group form-group-sm">
+        <label class="col-sm-4" for="givenName">GivenName</label>
+        <div class="col-sm-8">
+          <input ng-model="model.givenName" class="form-control" id="givenName" placeholder="GivenName">
         </div>
       </div>
 
       <div class="form-group form-group-sm">
         <label class="col-sm-4" for="commonName">CommonName</label>
         <div class="col-sm-8">
-          <input ng-model="user.user.commonName" class="form-control" id="commonName" placeholder="CommonName">
+          <input ng-model="model.cn" class="form-control" id="commonName" placeholder="CommonName" disabled>
         </div>
       </div>
 
       <div class="form-group form-group-sm">
         <label class="col-sm-4" for="email">Email address</label>
         <div class="col-sm-8">
-          <input ng-model="user.user.mail" type="email" class="form-control" id="email" placeholder="Email">
+          <input ng-model="model.mail" type="email" class="form-control" id="email" placeholder="Email">
         </div>
       </div>
       <div class="form-group form-group-sm">
         <label class="col-sm-4" for="address">Address</label>
         <div class="col-sm-8">
-          <input ng-model="user.user.postalAddress" class="form-control" id="address" placeholder="Address">
+          <input ng-model="model.postalAddress" class="form-control" id="address" placeholder="Address">
         </div>
       </div>
 
       <div class="form-group form-group-sm">
         <label class="col-sm-4" for="organization">Organization</label>
         <div class="col-sm-8">
-          <input ng-model="user.user.o" class="form-control" id="organization" placeholder="Organization">
+          <input ng-model="model.o" class="form-control" id="organization" placeholder="Organization">
         </div>
       </div>
 
       <div class="form-group form-group-sm">
         <label class="col-sm-4" for="organization">Description</label>
         <div class="col-sm-8">
-          <input ng-model="user.user.description" class="form-control" id="description" placeholder="Description">
+          <input ng-model="model.description" class="form-control" id="description" placeholder="Description">
         </div>
       </div>
       <div class="form-group form-group-sm">
         <label class="col-sm-4" for="manager">Nom du Responsable</label>
         <div class="col-sm-8">
-          <input ng-model="user.user.manager" class="form-control" id="manager" placeholder="Manager">
+          <input ng-model="model.manager" class="form-control" id="manager" placeholder="Manager">
         </div>
       </div>
       <div class="form-group form-group-sm">
         <label class="col-sm-4" for="shadowExpire">shadowExpire</label>
         <div class="col-sm-8">
-          <input ng-model="user.user.shadowExpire" class="form-control" id="shadowExpire" placeholder="shadowExpire">
+          <input ng-model="model.shadowExpire" class="form-control" id="shadowExpire" placeholder="shadowExpire">
         </div>
       </div>
       <div class="form-group form-group-sm">
         <label class="col-sm-4" for="preferredLanguage">Contexte</label>
         <div class="col-sm-8">
-          <input ng-model="user.user.preferredLanguage" class="form-control" id="preferredLanguage"
+          <input ng-model="model.preferredLanguage" class="form-control" id="preferredLanguage"
           placeholder="preferredLanguage">
         </div>
       </div>
@@ -68,33 +84,26 @@
 
     <div class="col-md-6">
 
-      <div class="form-group">
+      <div class="form-group" ng-if="model.$promise">
         <label class="col-sm-4" for="givenName">Password</label> <a>Re-initialiser</a>
-      </div>
-
-      <div class="form-group form-group-sm">
-        <label class="col-sm-4" for="givenName">GivenName</label>
-        <div class="col-sm-8">
-          <input ng-model="user.user.givenName" class="form-control" id="givenName" placeholder="GivenName">
-        </div>
       </div>
       <div class="form-group form-group-sm">
         <label class="col-sm-4" for="phone">Phone</label>
         <div class="col-sm-8">
-          <input ng-model="user.user.telephoneNumber" class="form-control" id="phone" placeholder="telephoneNumber">
+          <input ng-model="model.telephoneNumber" class="form-control" id="phone" placeholder="telephoneNumber">
         </div>
       </div>
       <div class="form-group form-group-sm">
         <label class="col-sm-4" for="fax">fax</label>
         <div class="col-sm-8">
-          <input ng-model="user.user.facsimile" class="form-control" id="fax" placeholder="facsimileTelephoneNumber">
+          <input ng-model="model.facsimile" class="form-control" id="fax" placeholder="facsimileTelephoneNumber">
         </div>
       </div>
 
       <div class="form-group form-group-sm">
         <label class="col-sm-4" for="title">Title</label>
         <div class="col-sm-8">
-          <input ng-model="user.user.title" class="form-control" id="title" placeholder="Title">
+          <input ng-model="model.title" class="form-control" id="title" placeholder="Title">
         </div>
       </div>
 
